feat: add open modal function

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -392,7 +392,7 @@
         <div class="container">
           <h2 class="testimonials__title">Testimonials</h2>
           <div class="testimonials__inner">
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -419,9 +419,9 @@
                   instill a love for animals.
                 </p>
               </div>
-              <button class="popup-close">X</button>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -448,9 +448,9 @@
                   instill a love for animals.
                 </p>
               </div>
-              <div class="popup-close">X</div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -477,64 +477,9 @@
                   instill a love for animals.
                 </p>
               </div>
-              <div class="popup-close">X</div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
-              <div class="testimonials__item-user item-user">
-                <img
-                  class="item-user__icon"
-                  src="./assets/icons/testemonials/item-user-icon-3.svg"
-                  alt="item-user-icon"
-                />
-                <div class="item-user__name">Oskar Samborsky</div>
-                <div class="item-user__location">
-                  Local Austria
-                  <span class="item-user__date"> Yesterday </span>
-                </div>
-              </div>
-              <p class="testimonials__item-text">
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo Ive met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals. best online zoo Ive met. My son delighted very much
-                ljves to watch gouillas. Online zoo is one jf the ways to
-                instill a love for animals.The best online zoo I’ve met. My son
-                delighted very much ljves to watch gouillas. Online zoo is one
-              </p>
-            </div>
-            <div class="testimonials__item" data-popup="popup">
-              <div class="testimonials__item-user item-user">
-                <img
-                  class="item-user__icon"
-                  src="./assets/icons/testemonials/item-user-icon-3.svg"
-                  alt="item-user-icon"
-                />
-                <div class="item-user__name">Oskar Samborsky</div>
-                <div class="item-user__location">
-                  Local Austria
-                  <span class="item-user__date"> Yesterday </span>
-                </div>
-              </div>
-              <p class="testimonials__item-text">
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals.
-              </p>
-            </div>
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -561,9 +506,9 @@
                   instill a love for animals.
                 </p>
               </div>
-              <div class="popup-close">X</div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -590,9 +535,9 @@
                   instill a love for animals.
                 </p>
               </div>
-              <div class="popup-close">X</div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
               <div class="testimonials__item-wrapper">
                 <div class="testimonials__item-user item-user">
                   <img
@@ -619,88 +564,152 @@
                   instill a love for animals.
                 </p>
               </div>
-              <div class="popup-close">X</div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
-              <div class="testimonials__item-user item-user">
-                <img
-                  class="item-user__icon"
-                  src="./assets/icons/testemonials/item-user-icon-3.svg"
-                  alt="item-user-icon"
-                />
-                <div class="item-user__name">Oskar Samborsky</div>
-                <div class="item-user__location">
-                  Local Austria
-                  <span class="item-user__date"> Yesterday </span>
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-2.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Oska Samborska</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
                 </div>
+                <p class="testimonials__item-text">
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.The best online zoo I’ve met. My
+                  son delighted very much ljves to watch gouillas. The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
               </div>
-              <p class="testimonials__item-text">
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo Ive met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals. best online zoo Ive met. My son delighted very much
-                ljves to watch gouillas. Online zoo is one jf the ways to
-                instill a love for animals.The best online zoo I’ve met. My son
-                delighted very much ljves to watch gouillas. Online zoo is one
-              </p>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
-              <div class="testimonials__item-user item-user">
-                <img
-                  class="item-user__icon"
-                  src="./assets/icons/testemonials/item-user-icon-3.svg"
-                  alt="item-user-icon"
-                />
-                <div class="item-user__name">Oskar Samborsky</div>
-                <div class="item-user__location">
-                  Local Austria
-                  <span class="item-user__date"> Yesterday </span>
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-4.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Fredericka Michelin</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
                 </div>
+                <p class="testimonials__item-text">
+                  My son delighted very much ljves to watch gouillas. Online zoo
+                  is one jf the ways to instill a love for animals.The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. The best online zoo Ive
+                  met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
               </div>
-              <p class="testimonials__item-text">
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals.
-              </p>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
-            <div class="testimonials__item" data-popup="popup">
-              <div class="testimonials__item-user item-user">
-                <img
-                  class="item-user__icon"
-                  src="./assets/icons/testemonials/item-user-icon-3.svg"
-                  alt="item-user-icon"
-                />
-                <div class="item-user__name">Oskar Samborsky</div>
-                <div class="item-user__location">
-                  Local Austria
-                  <span class="item-user__date"> Yesterday </span>
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-1.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Michael John</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Today </span>
+                  </div>
                 </div>
+                <p class="testimonials__item-text">
+                  The best online zoo I’ve met. My son delighted very much ljves
+                  to watch gouillas. Online zoo is one jf the ways to instill a
+                  love for animals.The best online zoo I’ve met. My son
+                  delighted very much ljves to watch gouillas. Online zoo is one
+                  jf the ways to instill a love for animals. The best online zoo
+                  I’ve met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
               </div>
-              <p class="testimonials__item-text">
-                Online zoo is one jf the ways to instill a love for animals.The
-                best online zoo I’ve met. My son delighted very much ljves to
-                watch gouillas. Online zoo is one jf the ways to instill a love
-                for animals.The best online zoo I’ve met. My son delighted very
-                much ljves to watch gouillas. The best online zoo I’ve met. My
-                son delighted very much ljves to watch gouillas. Online zoo is
-                one jf the ways to instill a love for animals.The best online
-                zoo I’ve met. My son delighted very much ljves to watch
-                gouillas. Online zoo is one jf the ways to instill a love for
-                animals.
-              </p>
+              <button class="popup-close" id="popup-close">X</button>
+            </div>
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-2.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Oska Samborska</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.The best online zoo I’ve met. My
+                  son delighted very much ljves to watch gouillas. The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+              <button class="popup-close" id="popup-close">X</button>
+            </div>
+            <div class="testimonials__item" id="popup-item" data-popup="popup">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="./assets/icons/testemonials/item-user-icon-4.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Fredericka Michelin</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  My son delighted very much ljves to watch gouillas. Online zoo
+                  is one jf the ways to instill a love for animals.The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. The best online zoo Ive
+                  met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+              <button class="popup-close" id="popup-close">X</button>
             </div>
           </div>
           <input
@@ -715,7 +724,7 @@
             leave feedback
           </button>
         </div>
-        <div class="popup-overlay"></div>
+        <div class="popup-overlay" id="popup-overlay"></div>
       </section>
     </main>
 
