--- a/songbird/src/quiz.html
+++ b/songbird/src/quiz.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html',{ "title":"Главная" })
+  @@include('html/head.html',{ "title":"quiz" })
   <body>
     @@include('html/header.html',{})
-    <main></main>
+
+    <main>@@include('html/quiz/quiz-main.html')</main>
+
     @@include('html/footer.html',{})
+
     <script src="js/app.min.js"></script>
   </body>
 </html>
