feat:add basic style

--- a/songbird/src/html/footer.html
+++ b/songbird/src/html/footer.html
@@ -1,1 +1,49 @@
-<footer></footer>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__inner">
+      <div class="footer__social">
+        <div class="footer__social-links social-links">
+          <ul class="social-links__items">
+            <li class="social-links__item">
+              <a
+                class="social-links__link github"
+                href="https://github.com/SergeyTimofeev1"
+                ><i class="fa fa-github" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li class="social-links__item">
+              <a
+                class="social-links__link telegram"
+                href="https://t.me/Timofeevprod"
+              >
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="social-links__item">
+              <a
+                class="social-links__link instagram"
+                href="https://instagram.com/timofeevprod?igshid=YmMyMTA2M2Y="
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li class="social-links__item">
+              <a class="social-links__link" href="tel:89117607146">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__logo">
+        <a class="footer__logo-link" href="https://rs.school/js/">
+          <img
+            class="footer__logo-img"
+            src="../img/quiz/rs_school_js.png"
+            alt="rs_school_js"
+          />
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
