--- a/songbird/src/html/header.html
+++ b/songbird/src/html/header.html
@@ -2,7 +2,10 @@
   <div class="container">
     <div class="header__inner">
       <!-- <img class="header__logo" src="" alt="" /> -->
-      <h1 class="header__logo">Songbird</h1>
+      <a class="header__logo-link" href="index.html">
+        <h1 class="header__logo">Songbird</h1>
+      </a>
+
       <nav class="header__nav nav-header">
         <ul class="nav-header__items">
           <li class="nav-header__item">
