--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   @@include('html/head.html',{ "title":"Главная" })
-  <body>
+  <body class="main-body">
     @@include('html/header.html',{})
-    <main></main>
+    <main>@@include('html/main/main.html')</main>
     @@include('html/footer.html',{})
+
     <script src="js/app.min.js"></script>
   </body>
 </html>
